[package]
name = "lighthouse"
version = "0.1.0"
authors = ["Damon Myers <damon.shane.myers@gmail.com>"]
edition = "2018"

[dependencies]
actix = "0.7"
actix-web = "0.7"
diesel = { version = "1.3", features = ["sqlite", "r2d2"] }
dotenv = "0.10"
futures = "0.1"
r2d2 = "0.8"
serde = "1.0"
serde_derive = "1.0"
serde_json = "1.0"
toml = "0.4"

[replace]
"diesel:1.3.3" = { git = "https://github.com/diesel-rs/diesel" }
"diesel_derives:1.3.0" = { git = "https://github.com/diesel-rs/diesel" }

# Use the bundled Sqlite on Windows
[target.'cfg(windows)'.dependencies]
libsqlite3-sys = { version = "0.9", features = ["bundled"] }
